# Call_Management_Dashboard

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/core/: database.py  enums.py  exception_handlers.py  exceptions.py  schemas.py
src/data/: seed_data.py
src/models/: call.py  note.py
src/services/: call_services.py
tests/: conftest.py  factories.py  test_calls.py
