[project]
name = "Call_Management_Dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
	"ruff>=0.15.7",
	"fastapi>=0.135.2",
	"uvicorn>=0.42.0",
	"pydantic>=2.12.5",
	"sqlalchemy>=2.0.0",
	"psycopg2-binary>=2.9.3"
]
